Fixes even height column on firefox

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -99,10 +99,11 @@ img {
 }
 
 .box-row {
+    height: 100%;
     margin-bottom: 2em;
 
     .grid-col {
-        height: 0;
+        height: 100%;
 
         .box {
             height: 100%;
@@ -121,6 +122,7 @@ img {
     }
 
     @include breakpoint(mobile) {
+        height: auto;
         margin-bottom: 0;
 
         .grid-col {
